# ZTicTacToe

./: .flake8  .gitignore  .readthedocs.yml  CHANGES.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  verify_production.py
docs/: conf.py  index.md
docs/src/: examples.md  modules.md  zttt.md
tests/: __init__.py  basic_tests.py  test_production_quality.py  test_quality_checks.py
zttt/: __init__.py  pvc.py  pvp.py  zt_errors.py
zttt/_zt_core/: __init__.py  zt_base_board.py  zt_base_engine.py  zt_engine_first.py  zt_player_first.py
