[tool.poetry]
name = "zttt"
version = "1.0.2"
description = "Simple, Standalone Tic Tac Toe Library"
license = "MIT"
authors = ["Sumanth NR <sumanthnr62@gmail.com>"]
readme = "README.rst"
homepage = "https://ztictactoe.readthedocs.io/en/latest/"
repository = "https://github.com/Sigma1084/ZTicTacToe/tree/v1"
documentation = "https://ztictactoe.readthedocs.io/en/v1/"
keywords = ["ZTTT", "TTT", "Tic Tac Toe", "X-O", "poetry", "sphinx"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_tests.py"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
